[package]
name = "honggfuzz"
version = "0.5.9"
authors = ["Paul Grandperrin <paul.grandperrin@gmail.com>"]
license = "MIT/Apache-2.0/Unlicense/WTFPL"
repository = "https://github.com/rust-fuzz/honggfuzz-rs"
documentation = "https://docs.rs/honggfuzz"
homepage = "https://github.com/rust-fuzz/honggfuzz-rs/blob/master/README.md"
readme = "README.md"
keywords = ["honggfuzz", "security", "fuzzer", "fuzzing", "testing"]
categories = ["development-tools::testing"]
description = """
Fuzz your Rust code with Honggfuzz !
"""

exclude = [
	"/honggfuzz/examples/**",
	"/honggfuzz/hfuzz_cc/**",
	"/honggfuzz/**/*.png",
	"/honggfuzz/includes/**",
]

[badges]
travis-ci = { repository = "rust-fuzz/honggfuzz-rs", branch = "master" }
maintenance = { status = "actively-developed" }

[target.'cfg(fuzzing_debug)'.dependencies]
memmap = "0.6"
