[package]
name = "honggfuzz"
version = "0.5.33"
authors = ["Paul Grandperrin <paul.grandperrin@gmail.com>"]
license = "MIT/Apache-2.0/Unlicense/WTFPL"
repository = "https://github.com/rust-fuzz/honggfuzz-rs"
documentation = "https://docs.rs/honggfuzz"
homepage = "https://github.com/rust-fuzz/honggfuzz-rs/blob/master/README.md"
readme = "README.md"
keywords = ["fuzzer", "fuzzing", "testing", "security", "property"]
categories = ["command-line-utilities", "development-tools::testing", "development-tools::cargo-plugins", "development-tools::debugging"]
description = """
Fuzz your Rust code with Google-developped Honggfuzz !
"""

exclude = [
	"/honggfuzz/examples/**",
	"/honggfuzz/hfuzz_cc/**",
	"/honggfuzz/**/*.png",
	"/honggfuzz/includes/**",
]

[badges]
travis-ci = { repository = "rust-fuzz/honggfuzz-rs", branch = "master" }
maintenance = { status = "actively-developed" }

[dev-dependencies]
rand = "0.5"

[target.'cfg(fuzzing)'.dependencies]
lazy_static = "1.1"

[target.'cfg(fuzzing_debug)'.dependencies]
memmap = "0.7"
