[package]
name = "example"
version = "0.0.0"
edition = "2018"
authors = ["Paul Grandperrin <paul.grandperrin@gmail.com>"]
default-run = "example"

[[bin]]
name = "example"
path = "src/main.rs"

[[bin]]
name = "arbitrary-example"
path = "src/arbitrary_main.rs"

[dependencies]
honggfuzz = { path = ".." }
