[package]
name = "example"
version = "0.0.0"
edition = "2018"
authors = ["Paul Grandperrin <paul.grandperrin@gmail.com>"]
default-run = "example"

[features]
arbitrary = ["honggfuzz/arbitrary"]

[[bin]]
name = "example"
path = "src/main.rs"

[dependencies]
honggfuzz = {path = "..", default-features = false}
